# Marpa-XS

./: .gitignore  Build.PL  Changes  LICENSE  MANIFEST  META.json  META.yml  Makefile.PL  README  TODO  html_pp_test.sh  html_xs_test.sh  typemap
author.t/: Makefile  ampersand.t  critic.t  display.t  meta_yaml.t  perlcriticrc  pod.t
config/Marpa/XS/: Build_Me.pm  Config.pm  License.pm
devlib/ppshim/: Marpa.pm
devlib/ppshim/Marpa/: Test.pm
devlib/xsshim/: Marpa.pm
devlib/xsshim/Marpa/: Test.pm
etc/: Makefile  change_version.pl  check_license.pl  check_links.pl  track.list
html/lib/Marpa/: HTML.pm
html/lib/Marpa/HTML/Test/: Util.pm
html/t/: copy.t  examples.t  parse.t  synopsis.t
html/xt/: 00-load.t
inc/drafts/: TODO.pod  undocumented.list
inc/drafts/Doc/: Models.pod
inc/libmarpa/: Makefile  Makefile.am  Makefile.in  bootstrap  config.h.in  configure  configure.ac  utils.c
inc/proof/: Makefile  ah2002_notes.lyx  ah_to_leo.lyx  proof.lyx
lib/Marpa/: XS.pm
lib/Marpa/XS/: Build_Me.pm  Callback.pm  Config.pm  Display.pm  Grammar.pm  Grammar_PP.pm  Internal.pm  License.pm  Offset.pm  Perl.pm  Recognizer.pm  Recognizer_PP.pm  Slot.pm  Test.pm  Value.pm  Value_PP.pm
lib/Marpa/XS/Internal/: Carp_Not.pm
lib/Marpa/XS/Test/: Util.pm
libmarpa/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
libmarpa/dev/: Makefile  README  copyright_page_license.w  cwebmac.tex  marpa.w  utils.c  utils.idx  utils.tex  utils.toc  utils.w
libmarpa/libavl/: Makefile  README_MARPA
libmarpa/main/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
libmarpa/main/src/: Makefile  Makefile.am  Makefile.in  marpa.c  marpa.h  standalone.c
libmarpa/src/: Makefile.am  Makefile.in  utils.c  utils.h
libmarpa/test/dev/: Makefile.in  configure
pod/: Debug.pod  Grammar.pod  Marpa_XS.pod  Parse_Terms.pod  Recognizer.pod  Semantics.pod  Support.pod  Tracing.pod
pod/Advanced/: Algorithm.pod  Bibliography.pod  Implementation.pod  Leo.pod  Models.pod
pod/Semantics/: Null.pod
t/: 00-load.t  01-xs.t  02-load_pp.t  Makefile  ah.t  ah2.t  ah_numeric.t  code_diag.t  counter.t  curly.t  cycle_count.t  debug.t  debug_leo.t  debug_seq.t  duplicate_parse.t  equation.t  final_nonnullable.t  gj.t  hu.t  implementation.t  infinite.t  infinite2.t  infinite_plex.t  initial_nulls.t  leo.t  leo2.t  leo3.t  leo_example.t  limits.t  minus.t  null_example.t  null_infinite1.t  null_infinite4.t  null_value.t  pascal.t  perl.t  randal.t  rewrite.t  sequence.t  sequence2.t  (+7 more)
t/base/: ah2.t  chaf.t  curly.t  cycle_count.t  debug.t  debug_leo.t  debug_seq.t  duplicate_parse.t  equation.t  final_nonnullable.t  gabend.t  gj.t  hu.t  implementation.t  infinite.t  infinite2.t  infinite_plex.t  initial_nulls.t  leo.t  leo2.t  leo3.t  leo_cycle.t  leo_example.t  limits.t  minus.t  null_example.t  null_infinite1.t  null_value.t  pascal.t  perl.t  rabend.t  randal.t  rewrite.t  sequence.t  syn_engine.t  timeflies.t  wall.t  weaken.t
t/pp/: 00-load.t  debug_leo.t  infinite.t  leo.t  leo_cycle.t  weaken.t
t/xs/: ah.t  debug_seq.t  leo_cycle.t
xs/: XS.xs
